# plots_app

./: .gitignore  README.md  plots_app.py  pyproject.toml  test_client.py
live_plotly/: server.py  test_client.py
