[project]
name = "live-plotly"
version = "0.1.0"
description = "Sample app with real time plotly plot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "live-plotly",
    "plotly>=5.24.0",
    "fh-plotly>=0.1.1",
    "sse-starlette>=2.1.3",
    "pandas>=2.2.2",
    "python-fasthtml>=0.4.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["live_plotly"]

[tool.uv.sources]
live-plotly = { workspace = true }
